modify docker-compose.yml for db init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,36 +10,41 @@ services:
       POSTGRES_DB: airflow
     ports:
       - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   airflow-webserver:
-    image: myrepo/airflow-etl:latest
+    image: kirant1997/airflow-etl-reddit:latest
     container_name: airflow-webserver
     restart: always
     volumes:
       - ./dags:/opt/airflow/dags
       - ./scripts:/opt/airflow/scripts
       - ./env/:/opt/airflow/env
+      - ./logs:/opt/airflow/logs
     environment:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
     ports:
       - "8080:8080"
+    entrypoint: >
+      sh -c "airflow db init &&
+             airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com &&
+             airflow webserver"
 
   airflow-scheduler:
-    image: myrepo/airflow-etl:latest
+    image: kirant1997/airflow-etl-reddit:latest
     container_name: airflow-scheduler
     restart: always
     volumes:
       - ./dags:/opt/airflow/dags
       - ./scripts:/opt/airflow/scripts
       - ./env/:/opt/airflow/env
+      - .logs:/opt/airflow/logs
     environment:
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
     depends_on:
       - airflow-webserver
+    command: scheduler
 
-  flower:
-    image: myrepo/airflow-etl:latest
-    container_name: flower
-    restart: always
-    ports:
-      - "5555:5555"
+volumes:
+  postgres-data:
